# display3r

./: .gitattributes  .gitignore  CMakeLists.txt  COPYING  README.md  config.ini
cmake/: FindSDL2.cmake  glmConfig.cmake  glmTargets.cmake
include/display3r/: Camera.hpp  Color.hpp  Config.hpp  Drawable.hpp  Equation.hpp  Exception.hpp  Face.hpp  Frame.hpp  Lens.hpp  Light.hpp  Object.hpp  Object2D.hpp  Object3D.hpp  PluginDetails.hpp  Renderer.hpp  Scene.hpp  Screen.hpp  SharedLibrary.hpp  Solid.hpp  State.hpp  Texture.hpp  Util.hpp  Vertex.hpp  Window.hpp  WindowMaker.hpp  ZBuffer.hpp  project.hpp  stringtool.hpp
include/display3r/SDL/: backend_SDL.hpp
include/display3r/ncurses/: backend_ncurses.hpp
models/: ball.eq  helicoid.eq  hill.eq  identity.eq  mobius.eq  mountain.eq  paraboloid.eq  plan.eq  sphere.eq  test.eq  torus.eq
scripts/: embedder2.py  extract_i18n.sh  genbuild.sh  remove_trailing_spaces.sh
src/: .gitignore  CMakeLists.txt  Camera.cpp  Color.cpp  Config.cpp  Drawable.cpp  Face.cpp  Frame.cpp  Lens.cpp  Light.cpp  Object.cpp  Renderer.cpp  Renderer2D.cpp  Renderer3D.cpp  RendererLight.cpp  SDL_Window.cpp  Scene.cpp  SharedLibrary.cpp  Solid.cpp  Texture.cpp  Util.cpp  Vertex.cpp  Window.cpp  WindowMaker.cpp  ZBuffer.cpp  equation.cpp  event.c  main.cpp
src/SDL/: backend_SDL.cpp
src/ncurses/: backend_ncurses.cpp  ncurses_ctl.cpp
